libs/@local/hashql/ast/tests/ui/lower/expander/special-form-expander/fn-params-tuple.jsonc
//@ run: fail
//@ description: fn/4 tuple params should fail to compile
[
  "::kernel::special_form::fn",
  { "#struct": {} },
  { "#tuple": [] },
  //~^ ERROR expected a struct for function parameters
  "_",
  { "#literal": 0 }
]
